--- a/src/book.tex
+++ b/src/book.tex
@@ -162,11 +162,41 @@
 % To enable figures at the bottom of page
 \usepackage{dblfloatfix}
 
+\usepackage{fancyvrb}
+
 \definecolor{bg_color}{HTML}{EEEEEE}
-\usepackage{listings}
+
+% Copy part of a file to a temporary file.
+% This function is necessary when listing snippets from our
+% large asm files using \lstinputlisting. It seems that \lstinputlist
+% will parse the entire file up to the position of the snippet each
+% time, making compile performance terrible (many minutes on more than
+% just a dozen snippets). Using this function to copy the part of the
+% file we're interested into a temporary file and using that as the input
+% to \lstinputlisting reduces compile time to seconds again.
+\ExplSyntaxOn
+\NewDocumentCommand \CopyPartialFile {mmmm} {
+\ior_open:Nn \g_tmpa_ior {#1}
+\iow_open:Nn \g_tmpa_iow {#2}
+\prg_replicate:nn {#3} {
+    \ior_str_get:NN \g_tmpa_ior \l_tmpa_str
+}
+\def\tolines{\numexpr #4 - #3}
+\prg_replicate:nn {\tolines} {
+    \ior_str_get:NN \g_tmpa_ior \l_tmpa_str
+    \iow_now:Nx \g_tmpa_iow {\l_tmpa_str}
+}
+\ior_close:N \g_tmpa_ior
+\iow_close:N \g_tmpa_iow
+}
+\ExplSyntaxOff
+
+% FIXME: change draft to final when producing final version
+% This is necessary because lstinputlisting is really slow.
+\usepackage[final]{listings}
 \lstset{ 
   backgroundcolor=\color{bg_color},
-  breaklines=false,
+  breaklines=true,
    frame=single,
    basicstyle=\small\ttfamily,
    xleftmargin=9pt,
@@ -177,59 +207,19 @@
    % Make some parts appear in red.
    moredelim=**[is][\color{red}]{@}{@},
 }
+
 \lstdefinelanguage
-   [x64]{Assembler}     % add a "x64" dialect of Assembler
+   [6502]{Assembler}     % add a "x64" dialect of Assembler
    [x86masm]{Assembler} % based on the "x86masm" dialect
    % with these extra keywords:
-   {morekeywords={CDQE,CQO,CMPSQ,CMPXCHG16B,JRCXZ,LODSQ,MOVSXD, %
-                  POPFQ,PUSHFQ,SCASQ,STOSQ,IRETQ,RDTSCP,SWAPGS, %
-                  rax,rdx,rcx,rbx,rsi,rdi,rsp,rbp, %
-                  r8,r8d,r8w,r8b,r9,r9d,r9w,r9b, %
-                  r10,r10d,r10w,r10b,r11,r11d,r11w,r11b, %
-                  r12,r12d,r12w,r12b,r13,r13d,r13w,r13b, %
-                  r14,r14d,r14w,r14b,r15,r15d,r15w,r15b}} % etc.
+   {morekeywords={.BYTE,LDY,LDX,INC,LDA,BEQ,BNE,JSR,DEY,DEX,PHA,PLA,INY, %
+									STA,SEC,SBC,BCS,EOR,RTS,TXA,}} % etc.
 
-\lstset{language=[x64]Assembler}
 
 \definecolor{mGreen}{rgb}{0,0.6,0}
 \definecolor{mGray}{rgb}{0.5,0.5,0.5}
 \definecolor{keyword_color}{rgb}{0.00,0,1.0}
 
-\lstdefinestyle{CStyle}{
-    backgroundcolor=\color{bg_color},   
-    commentstyle=\color{mGreen},
-    keywordstyle=\color{keyword_color},
-    numberstyle=\tiny\color{mGray},
-    stringstyle=\color{mGreen},
-    breakatwhitespace=false,         
-    breaklines=false,                 
-    captionpos=b,                    
-    keepspaces=true,                                  
-    showspaces=false,                
-    showstringspaces=false,
-    showtabs=false,                  
-    tabsize=1,
-    language=C,
-    morekeywords={int8_t, int16_t, int32_t, uint8_t, __at}
-}
-
-\lstdefinestyle{BashStyle}{
-    backgroundcolor=\color{bg_color},   
-    commentstyle=\color{mGreen},
-    keywordstyle=\color{keyword_color},
-    numberstyle=\tiny\color{mGray},
-    stringstyle=\color{mGreen},
-    breakatwhitespace=false,         
-    breaklines=false,                 
-    captionpos=b,                    
-    keepspaces=true,                                  
-    showspaces=false,                
-    showstringspaces=false,
-    showtabs=false,                  
-    tabsize=1,
-    language=C,
-    morekeywords={cd, git, ccps}
-}
 
 \lstdefinestyle{6502Style}{
     backgroundcolor=\color{bg_color},   
@@ -245,50 +235,12 @@
     showstringspaces=false,
     showtabs=false,                  
     tabsize=1,
-    language=[x86masm]Assembler,
-    morekeywords={call, ld, or, jr,ldr, str,ldir, EI, IM, .area,
-		.BYTE,LDY,LDX,INC,LDA,BEQ,BNE,JSR,DEY,DEX,PHA,PLA,INY,
-		STA,
-		}
-}
-
-\lstdefinestyle{Z80Style}{
-    backgroundcolor=\color{bg_color},   
-    commentstyle=\color{mGreen},
-    keywordstyle=\color{keyword_color},
-    numberstyle=\tiny\color{mGray},
-    stringstyle=\color{mGreen},
-    breakatwhitespace=false,         
-    breaklines=false,                 
-    captionpos=b,                    
-    keepspaces=true,                                  
-    showspaces=false,                
-    showstringspaces=false,
-    showtabs=false,                  
-    tabsize=1,
-    language=[x86masm]Assembler,
+    language=[6502]Assembler,
     morekeywords={call, ld, or, jr,ldr, str,ldir, EI, IM, .area}
 }
 
 
-\lstdefinestyle{m68kStyle}{
-    backgroundcolor=\color{bg_color},   
-    commentstyle=\color{mGreen},
-    keywordstyle=\color{keyword_color},
-    numberstyle=\tiny\color{mGray},
-    stringstyle=\color{mGreen},
-    breakatwhitespace=false,         
-    breaklines=false,                 
-    captionpos=b,                    
-    keepspaces=true,                                  
-    showspaces=false,                
-    showstringspaces=false,
-    showtabs=false,                  
-    tabsize=1,
-    language=[Motorola68k]Assembler,
-    morekeywords={.extern, .align, jbsr, dc., move.},
-    alsoletter={.}
-}
+\lstloadlanguages{[6502]Assembler}
 
 % KANJIS!
 \usepackage{CJKutf8}
@@ -325,7 +277,7 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 \definecolor{maskb}{HTML}{666655}
 \definecolor{maskc}{HTML}{666666}
 
-\newcommand*{\icode}[1]{\entoure{\texttt{#1}}}
+\newcommand*{\icode}[1]{{\texttt{#1}}}
 
 \newcommand{\smallcube}[2]{%
 \setlength{\fboxsep}{0pt}%
